fix: корректировка версии java проекта спринта 16